# spacy-polarity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-test.yml  upload-pypi.yml
docs/source/: conf.py  index.rst  intro.md
docs/source/api/: index.md  types.rst
spacy_polarity/: __init__.py  _transformers.py  types.py
tests/: test__transformers.py  test_component.py
