[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-polarity"
description = "Spacy extension for sentiment polarity"
readme = "README.md"
authors = [{ name = "sondalex"}]
license = { file = "LICENSE" }
dependencies = [
    "spacy>=3.1.0",
    "textblob>=0.19.0",
    "numpy<2.0.0"
]
requires-python = '>=3.10'
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "spacy_polarity._version.__version__"}

[project.urls]
homepage = "https://github.com/sondalex/spacy-polarity"
documentation = "https://github.com/sondalex/spacy-polarity"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]
transformers = ["transformers", "torch"]

[tool.setuptools]
packages = ["spacy_polarity"]



